--- a/.github/workflows/bum-goversion.yaml
+++ b/.github/workflows/bum-goversion.yaml
@@ -20,23 +20,23 @@ jobs:
           git config user.email 'lamassu-action@users.noreply.github.com'
 
           # Update the Go version in the go.mod file
-          sed -i '' "s/go [0-9.]*$/go ${{ github.event.inputs.release_version }}/" go.mod
+          sed -i '' "s/go [0-9.]*$/go ${{ github.event.inputs.go_version }}/" go.mod
 
           dockerfiles=$(find . -type f -name "*.dockerfile")
           # Loop through each Dockerfile and update the Go version
           for dockerfile in $dockerfiles; do
               # Update the Go version in Dockerfile
-              sed -i '' "s/golang:[0-9.]*-/golang:${{ github.event.inputs.release_version }}-/" Dockerfile
+              sed -i '' "s/golang:[0-9.]*-/golang:${{ github.event.inputs.go_version }}-/" Dockerfile
               
               echo "Updated Dockerfile: $dockerfile"
           done
 
-          git commit -s -am "Bump go version to ${{ github.event.inputs.release_version }}" 
+          git commit -s -am "Bump go version to ${{ github.event.inputs.go_version }}" 
           
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v6
         with:
-          title: "Bumping go version to ${{ github.event.inputs.release_version }}"
-          branch: "bump-go-version-${{ github.event.inputs.release_version }}"
+          title: "Bumping go version to ${{ github.event.inputs.go_version }}"
+          branch: "bump-go-version-${{ github.event.inputs.go_version }}"
           base: main
   
