--- a/.github/workflows/bum-goversion.yaml
+++ b/.github/workflows/bum-goversion.yaml
@@ -20,14 +20,14 @@ jobs:
           git config user.email 'lamassu-action@users.noreply.github.com'
 
           # Update the Go version in the go.mod file
-          sed -i '' "s/go [0-9.]*$/go ${{ github.event.inputs.go_version }}/" go.mod
+          sed -i "s/go [0-9.]*$/go ${{ github.event.inputs.go_version }}/" go.mod
 
           dockerfiles=$(find . -type f -name "*.dockerfile")
           # Loop through each Dockerfile and update the Go version
           for dockerfile in $dockerfiles; do
               # Update the Go version in Dockerfile
-              sed -i '' "s/golang:[0-9.]*-/golang:${{ github.event.inputs.go_version }}-/" Dockerfile
-              
+              sed -i "s/golang:[0-9.]*-/golang:${{ github.event.inputs.go_version }}-/" $dockerfile
+
               echo "Updated Dockerfile: $dockerfile"
           done
 
