--- a/.github/workflows/ci-test.yaml
+++ b/.github/workflows/ci-test.yaml
@@ -44,6 +44,7 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           codecov_yml_path: codecov.yml
+          commit_parent: 1607cb9
           slug: lamassuiot/lamassuiot.github.io
       # - name: Upload Coverage report to CodeCov
       #   uses: codecov/codecov-action@v1.0.0
