--- a/.github/workflows/ci-test.yaml
+++ b/.github/workflows/ci-test.yaml
@@ -43,6 +43,7 @@ jobs:
         uses: codecov/codecov-action@v4.0.1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
+          commit_parent: 1607cb9
           codecov_yml_path: codecov.yml
           slug: lamassuiot/lamassuiot.github.io
       # - name: Upload Coverage report to CodeCov
