--- a/.github/workflows/ci-test.yaml
+++ b/.github/workflows/ci-test.yaml
@@ -3,8 +3,9 @@ name: CI Launch Tests
 on:
   pull_request:
     types: [opened, synchronize, reopened]
+  push:
   workflow_call:
-    # Map the workflow outputs to job outputs
+    # Map the workflow outputs to job output
     outputs:
       coverage:
         description: "Coverage report"
