--- a/.github/workflows/ci-test.yaml
+++ b/.github/workflows/ci-test.yaml
@@ -33,10 +33,15 @@ jobs:
  
       - name: Install Dependencies
         run: go mod download
+      - name: Create annotation for build error
+        run: echo ${{ github.event.pull_request.base.sha }}
+      - name: Create annotation for build error head
+        run: echo ${{ github.event.pull_request.head.sha }}
+        
  
       - name: Run Golang Tests with coverage
         id: run
-        run: |
+        run: | 
           go run gotest.tools/gotestsum@latest --format github-actions ./pkg/x509engines/... -coverpkg=./... -timeout 600s -coverprofile coverage.txt
           float_coverage=$(go tool cover -func coverage.txt | grep total | awk '{print substr($3, 1, length($3)-1)}')
           echo "coverage=$float_coverage" >> $GITHUB_OUTPUT
