--- a/.github/workflows/ci-test.yaml
+++ b/.github/workflows/ci-test.yaml
@@ -55,7 +55,7 @@ jobs:
         uses: codecov/codecov-action@v4.2.0
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          commit_parent: "17cdb5a4c22d454a05bf32c0ad1d72d2ba288b42"
+          commit_parent: ${{ github.event.pull_request.base.sha }}
           codecov_yml_path: codecov.yml
           slug: lamassuiot/lamassuiot.github.io
       # - name: Upload Coverage report to CodeCov
