--- a/codecov.yml
+++ b/codecov.yml
@@ -2,6 +2,6 @@ comment:                  # this is a top-level key
   layout: " diff, flags, files"
   behavior: default
   require_changes: false  # if true: only post the comment if coverage changes
-  require_base: true        # [true :: must have a base report to post]
+  require_base: false        # [true :: must have a base report to post]
   require_head: true       # [true :: must have a head report to post]
   hide_project_coverage: false 
