--- a/.github/workflows/main-release.yaml
+++ b/.github/workflows/main-release.yaml
@@ -7,6 +7,9 @@ on:
         type: string
         description: release version when building docker containers (example; 2.0.0)
 
+run-name: >-
+  ${{ format('Release {0}', github.event.inputs.release_version) }}
+
 jobs:
   version_info:
     name: "Version Info"
@@ -39,9 +42,56 @@ jobs:
       major_version: ${{ env.MAJOR_VERSION }}
       release_version: ${{ env.RELEASE_VERSION }}
       release_version_with_v: ${{ env.RELEASE_VERSION_WITH_V }}
+ 
+  change_logs:
+    runs-on: ubuntu-latest
+    needs: version_info
+    # if: always()
+    container: quay.io/git-chglog/git-chglog:0.15.0
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Install main dependencies
+        run: |
+          apk add bash git grep yq
+          
+      - name: Generate charts changelog files
+        shell: bash
+        run: |
+          set -x
+
+          #
+          # Generate chart CHANGELOG.md file.
+          git-chglog                                                  \
+              --output "CHANGELOG.md"                                 \
+              --next-tag "${{ github.event.inputs.release_version }}" 
+
+          #
+          # Generate RELEASE-NOTES.md file.
+          git-chglog                                                  \
+              --output "CHANGELOG.md"                                 \
+              --next-tag "${{ github.event.inputs.release_version }}" \
+              "${{ github.event.inputs.release_version }}"
+
+      - name: Commit charts Chart.yaml, CHANGELOG.md and RELEASE-NOTES.md file 
+        run: |
+          git config user.name "$GITHUB_ACTOR"
+          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+
+          # Commit changes locally.
+          git add ${chart_path}/CHANGELOG.md
+          git add ${chart_path}/RELEASE-NOTES.md
+          git commit -m "Update CHANGELOG and RELEASE-NOTES"
+
+          # Push changes to branch.          
+          git push origin $GITHUB_REF_NAME
+
   create_tag:
     name: Create Tag
-    needs: [version_info]
+    needs: [change_logs]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -72,7 +122,7 @@ jobs:
           prerelease: false
           release_name: ${{ needs.version_info.outputs.release_version_with_v }}
           tag_name: ${{ needs.version_info.outputs.release_version_with_v }}
-          # body_path: CHANGELOG.md
+          body_path: RELEASE-NOTES.md
         env:
           GITHUB_TOKEN: ${{ github.token }}
       - name: Setup Go
