chore: handle case insensitive commit messages
Signed-off-by: haritz <hsaizsierra@gmail.com>

--- a/.chglog/config.yml
+++ b/.chglog/config.yml
@@ -24,7 +24,7 @@ options:
       test: Tests
       chore: Chores
   header:
-    pattern: "^((\\w+)\\s.*)$"
+    pattern: "^((\\w+)[\\s:]\\s.*)$"
     pattern_maps:
       - Subject
       - Type
