--- a/.github/workflows/main-release.yaml
+++ b/.github/workflows/main-release.yaml
@@ -84,8 +84,8 @@ jobs:
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
           # Commit changes locally.
-          git add ${chart_path}/CHANGELOG.md
-          git add ${chart_path}/RELEASE-NOTES.md
+          git add CHANGELOG.md
+          git add RELEASE-NOTES.md
           git commit -m "Update CHANGELOG and RELEASE-NOTES"
 
           # Push changes to branch.          
