--- a/.github/workflows/main-release.yaml
+++ b/.github/workflows/main-release.yaml
@@ -44,6 +44,7 @@ jobs:
       release_version_with_v: ${{ env.RELEASE_VERSION_WITH_V }}
  
   change_logs:
+    name: "Generate Change Logs and Release Notes"
     runs-on: ubuntu-latest
     needs: version_info
     # if: always()
@@ -84,8 +85,8 @@ jobs:
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
           # Commit changes locally.
-          git add ${chart_path}/CHANGELOG.md
-          git add ${chart_path}/RELEASE-NOTES.md
+          git add CHANGELOG.md
+          git add RELEASE-NOTES.md
           git commit -m "Update CHANGELOG and RELEASE-NOTES"
 
           # Push changes to branch.          
