--- a/.github/workflows/build-with-experimental.yaml
+++ b/.github/workflows/build-with-experimental.yaml
@@ -21,7 +21,9 @@ jobs:
           go-version: '^1.20.0' # The Go version to download (if necessary) and use.
 
       - name: Install Dependencies
+        working-directory: ./monolithic/
         run: go mod download
 
       - name: Build wiht experimental features
-        run: go build -tags experimental ./cmd/monolithic/development/main.go
+        working-directory: ./monolithic/
+        run: go build -tags experimental ./cmd/development/main.go
