Refactor: Relocate connector code
Signed-off-by: Juan Jose Rodriguez <jjrodriguez@lksnext.com>

--- a/.github/workflows/ci-test.yaml
+++ b/.github/workflows/ci-test.yaml
@@ -26,7 +26,7 @@ jobs:
           - engines/storage/postgres
           - engines/storage/sqlite
           - backend
-          - awsiotconnector
+          - connectors/awsiot
           - monolithic
           
     name: ${{ matrix.module }} - Tests
