adding refactor as changelog keyword
Signed-off-by: haritz <hsaizsierra@gmail.com>

--- a/.chglog/config.yml
+++ b/.chglog/config.yml
@@ -14,6 +14,7 @@ options:
         - security
         - test
         - chore
+        - refactor
   commit_groups:
     title_maps:
       feat: Features
@@ -23,6 +24,7 @@ options:
       security: Security Fixes
       test: Tests
       chore: Chores
+      refactor: Refactor
   header:
     pattern: "^((\\w+)[\\s:]\\s.*)$"
     pattern_maps:
