--- a/.github/workflows/main-release.yaml
+++ b/.github/workflows/main-release.yaml
@@ -33,11 +33,6 @@ jobs:
         run: echo "RELEASE_VERSION=${{ github.event.inputs.release_version }}" >> "$GITHUB_ENV"
       - name: Change RELEASE_VERSION_WITH_V env variable
         run: echo "RELEASE_VERSION_WITH_V=v${{ github.event.inputs.release_version }}" >> "$GITHUB_ENV"
-      - name: Print Info
-        run: |
-          echo "MAJOR_VERSION          = $MAJOR_VERSION"
-          echo "RELEASE_VERSION        = $RELEASE_VERSION"
-          echo "RELEASE_VERSION_WITH_V = $RELEASE_VERSION_WITH_V"
       - name: Modules to release
         id: matrix
         run: |
@@ -64,10 +59,18 @@ jobs:
           )
 
           # Convert the array into a JSON array
-          json_modules=$(printf '%s\n' "${MODULES[@]}" | jq -R . | jq -s .)
+          json_modules=$(printf '%s\n' "${MODULES[@]}" | jq -R -c . | jq -s -c .)
+          echo "json_modules=$json_modules"
 
           # Optionally, set the JSON array as an environment variable
           echo "JSON_MODULES=$json_modules" >> "$GITHUB_ENV"
+      - name: Print Info
+        run: |
+          echo "MAJOR_VERSION          = $MAJOR_VERSION"
+          echo "RELEASE_VERSION        = $RELEASE_VERSION"
+          echo "RELEASE_VERSION_WITH_V = $RELEASE_VERSION_WITH_V"
+          echo "JSON_MODULES           = $JSON_MODULES"
+
     outputs:
       major_version: ${{ env.MAJOR_VERSION }}
       release_version: ${{ env.RELEASE_VERSION }}
