add sudo in pkcs11 build tools installation
Signed-off-by: haritz <hsaizsierra@gmail.com>

--- a/.github/workflows/ci-test.yaml
+++ b/.github/workflows/ci-test.yaml
@@ -91,7 +91,7 @@ jobs:
       
       - name: Install PKCS11 Proxy Dependencies
         run: |
-          apt-get install -y libseccomp-dev #Required for building pkcs11-proxy
+          sudo apt-get install -y libseccomp-dev #Required for building pkcs11-proxy
           git clone https://github.com/SUNET/pkcs11-proxy
           cd pkcs11-proxy
           cmake . 
