--- a/.github/workflows/ci-test.yaml
+++ b/.github/workflows/ci-test.yaml
@@ -96,8 +96,8 @@ jobs:
           cd pkcs11-proxy
           cmake . 
           make
-          make install 
-          cp pkcs11-daemon /usr/local/bin/
+          sudo make install 
+          sudo cp pkcs11-daemon /usr/local/bin/
           ls /usr/local/lib/libpkcs11-proxy.so
  
       - name: Install Dependencies
