fix: update dockerrunner references and clean up unused test suite
Signed-off-by: Juan Jose Rodriguez <jjrodriguez@lksnext.com>

--- a/codecov.yml
+++ b/codecov.yml
@@ -114,7 +114,12 @@ ignore:
   - "**/*_mock.go"
   - "**/*_test.go"
   - "**/*_testset.go"
-  - "**/test/**"
-  - "**/subsystem/**"
-  - "**/docker/**"
+  - "**/test/*"
+  - "**/test/**/*"
+  - "**/subsystem/*"
+  - "**/subsystem/**/*"
+  - "**/docker/**/*"
+  - "**/docker/*"
+  - "**/dockerrunner/**/*"
+  - "**/dockerrunner/*"
 
