--- a/.github/workflows/release_finalize.yaml
+++ b/.github/workflows/release_finalize.yaml
@@ -30,7 +30,7 @@ jobs:
           echo "Last commit: $msg"
           
           # Check if this is a release commit
-          if [[ "$msg" =~ ^chore\(release\):\ prepare\ release\ ([0-9]+\.[0-9]+\.[0-9]+.*)$ ]]; then
+          if [[ "$msg" =~ ^chore:\ release:\ prepare\ release\ ([0-9]+\.[0-9]+\.[0-9]+.*)$ ]]; then
             version="${BASH_REMATCH[1]}"
             echo "is_release_commit=true" >> $GITHUB_OUTPUT
             echo "Found release version: $version"
