--- a/.github/workflows/release_open_pr.yaml
+++ b/.github/workflows/release_open_pr.yaml
@@ -1,4 +1,4 @@
-name: "Release Workflow: (create repo release, docker images and go packages)"
+name: "Release Workflow - Open Pull Request with release notes"
 
 on:
   workflow_dispatch:
@@ -45,19 +45,23 @@ jobs:
               --next-tag "${{ github.event.inputs.release_version }}" \
               "${{ github.event.inputs.release_version }}"
 
+      - name: Read generated files
+        id: read-files
+        run: |
+          echo "release-notes<<EOF" >> $GITHUB_OUTPUT
+          cat RELEASE-NOTES.md >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v7
         with:
-          commit-message: "chore(release): prepare release ${{ github.event.inputs.release_version }}"
+          commit-message: "chore: release: prepare release ${{ github.event.inputs.release_version }}"
           branch: "release-${{ github.event.inputs.release_version }}"
-          title: "chore(release): prepare release ${{ github.event.inputs.release_version }}"
+          title: "chore: release: prepare release ${{ github.event.inputs.release_version }}"
+          sign-commits: true
           body: |
             # Release ${{ github.event.inputs.release_version }}
 
             ## Release Notes
 
-            $(cat RELEASE-NOTES.md)
-
-            ## Changelog
-
-            $(cat CHANGELOG.md)
+            ${{ steps.read-files.outputs.release-notes }}
