fix: add missing engines to the release_finalize workflow
Signed-off-by: Jon Galipienzo <jgalipienzo@lksnext.com>

--- a/.github/workflows/release_finalize.yaml
+++ b/.github/workflows/release_finalize.yaml
@@ -71,14 +71,14 @@ jobs:
             "shared/http"
             "engines/crypto/aws"
             "engines/crypto/filesystem"
+            "engines/crypto/software"
             "engines/crypto/pkcs11"
             "engines/crypto/vaultkv2"
             "engines/eventbus/amqp"
             "engines/eventbus/aws"
-            "engines/eventbus/channel"
-            "engines/storage/couchdb"
             "engines/storage/postgres"
-            "engines/storage/sqlite"
+            "engines/fs-storage/localfs"
+            "engines/fs-storage/s3"
             "backend"
             "connectors/awsiot"
             "monolithic"
