backend test first in ci
Signed-off-by: hsaizsierra <hsaizsierra@gmail.com>

--- a/.github/workflows/ci-test.yaml
+++ b/.github/workflows/ci-test.yaml
@@ -17,6 +17,8 @@ jobs:
       max-parallel: 5
       matrix:
         module: 
+          - path: backend
+            tag: backend
           - path: core
             tag: core
           - path: sdk
